versioned_docs/version-0.11/enterprise/administration/dashboard.mdx
---
title: Admin Dashboard
description: Admin Dashboard
id: dashboard
---

The Admin Dashboard provides a web UI for administering some features of Okteto.

You can access the Admin Dashboard by clicking on the `Admin` icon on the left sidebar.

## Accessing the dashboard

Only accounts with the administrator role will be able to access the Administration Dashboard. The first user signing up into your Okteto instance will automatically become the initial administrator.

You can promote other accounts to the administrator role in the `Users` section of the Admin Dashboard or by adding the `dev.okteto.com/super: "true"` label to the corresponding `serviceAccount` in Kubernetes.

## Overview Section

The overview section of the Admin Dashboard shows you the following information:

- Expiration date of your license
- Number of available seats
- Number of nodes in your cluster
- Number of namespaces managed by Okteto
- Number of preview environments currently active
- Autoscaler configuration
- Garbage Collector configuration

## Users Section

You can administer all users in your Okteto instance from the Admin Dashboard's Users section.

For each user, an administrator will be able to:

- View their name, email, and avatar
- Change their role
- Remove the user

> Removing the user will automatically remove all the namespaces owned by the deleted user.

## Nodes Section

The Nodes section of the Admin Dashboard provides the following system information about your Kubernetes cluster:

- Number of running pods
- Total amount of memory currently in use
- Total amount of memory requested
- Total amount of CPU currently in use
- Total amount of CPU requested

You can use this information to configure [the autoscaler](/docs/0.11/enterprise/administration/configuration/#autoscaler).

## Namespaces Section

You can administer all namespaces in your Okteto instance from the Admin Dashboard's Namespaces section.

For each namespace, an administrator will be able to:

- View the name, owner, resources currently consumed, resources presently requested, and the last time it was accessed
- Mark the namespace as `persistent` to prevent it from being automatically scaled to zero or deleted by the [garbage collector](/docs/0.11/enterprise/administration/cleanup/#delete-unused-namespaces)
- Get `read-only` access to any namespace managed by Okteto

## Secrets Section

The Secrets section of the Admin dashboard lets you define cluster-wide secrets. Using the `$SECRET_NAME` syntax, you can refer to these secrets directly in your Okteto manifest. They are also injected into the [environment running](/docs/cloud/okteto-cli/#built-in-tools-when-deploying-to-okteto-cloud) the commands in the `deploy` section of the manifest.

> Secrets [defined by the user](/docs/cloud/secrets/) take precedence over the secrets defined here in case of a name collision.
